--- a/train.ipynb
+++ b/train.ipynb
@@ -715,15 +715,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "WARNING:tensorflow:9 out of the last 15 calls to <function Model.make_predict_function.<locals>.predict_function at 0x7ffc9095a430> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/tutorials/customization/performance#python_or_tensor_args and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
-      "Class =  [[0. 1. 0.]] --> ROCK\n"
+      "Class =  [[0. 0. 1.]] --> SCISSORS\n",
+      "Class =  [[0. 0. 1.]] --> SCISSORS\n",
+      "Class =  [[0. 0. 1.]] --> SCISSORS\n",
+      "Class =  [[0. 0. 1.]] --> SCISSORS\n",
+      "Class =  [[0. 1. 0.]] --> ROCK\n",
+      "Class =  [[0. 0. 1.]] --> SCISSORS\n",
+      "Class =  [[0. 0. 1.]] --> SCISSORS\n",
+      "Class =  [[0. 0. 1.]] --> SCISSORS\n",
+      "Class =  [[0. 1. 0.]] --> ROCK\n",
+      "Class =  [[0. 0. 1.]] --> SCISSORS\n",
+      "Class =  [[0. 1. 0.]] --> ROCK\n",
+      "Class =  [[0. 0. 1.]] --> SCISSORS\n",
+      "Class =  [[0. 0. 1.]] --> SCISSORS\n",
+      "Class =  [[0. 1. 0.]] --> ROCK\n",
+      "Class =  [[0. 0. 1.]] --> SCISSORS\n",
+      "Class =  [[0. 0. 1.]] --> SCISSORS\n",
+      "Class =  [[0. 0. 1.]] --> SCISSORS\n",
+      "Class =  [[0. 0. 1.]] --> SCISSORS\n",
+      "Class =  [[0. 0. 1.]] --> SCISSORS\n",
+      "Class =  [[0. 0. 1.]] --> SCISSORS\n",
+      "Class =  [[0. 0. 1.]] --> SCISSORS\n"
      ]
     }
    ],
@@ -733,19 +752,19 @@
     "model.compile(loss='binary_crossentropy',\n",
     "              optimizer='rmsprop',\n",
     "              metrics=['accuracy'])\n",
+    "for i in range(21):\n",
+    "    img = cv2.imread('imm/NewPicture'+str(i)+'.jpg')\n",
+    "    img = cv2.resize(img,(128,128))\n",
+    "    img = np.reshape(img,[1,128,128,3])\n",
     "\n",
-    "img = cv2.imread('NewPicture.jpg')\n",
-    "img = cv2.resize(img,(128,128))\n",
-    "img = np.reshape(img,[1,128,128,3])\n",
-    "\n",
-    "classes = model.predict(img)\n",
-    "if classes[0][0] == 1:\n",
-    "    x = 'PAPER'\n",
-    "elif classes[0][1] == 1:\n",
-    "    x = 'ROCK'\n",
-    "else:\n",
-    "    x = 'SCISSORS'\n",
-    "print('Class = ',classes,'-->',x)"
+    "    classes = model.predict(img)\n",
+    "    if classes[0][0] == 1:\n",
+    "        x = 'PAPER'\n",
+    "    elif classes[0][1] == 1:\n",
+    "        x = 'ROCK'\n",
+    "    else:\n",
+    "        x = 'SCISSORS'\n",
+    "    print('Class = ',classes,'-->',x)"
    ]
   },
   {
